--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon(2).jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SamHub</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
